Add node scaling documentation and automation script
- Add docs/SCALING.md with comprehensive add/remove node guide
- Add scripts/manage-node.sh for automated node management
- Update active-node.example.yml with scaling comments
- Update cloudflare-failover.yml with scaling notes
- Update haproxy.cfg.example with scaling comments
- Update README.md with scalability feature and docs link

--- a/.github/workflows/cloudflare-failover.yml
+++ b/.github/workflows/cloudflare-failover.yml
@@ -20,10 +20,15 @@ on:
         description: 'Target HA node for DNS failover'
         type: choice
         required: true
+        # SCALING: Update this list when adding/removing nodes.
+        #          See docs/SCALING.md for complete instructions.
         options:
           - ha01
           - ha02
           - ha03
+          # Add more nodes as needed:
+          # - ha04
+          # - ha05
       reason:
         description: 'Reason for failover (for audit trail)'
         type: string
